--- a/style.css
+++ b/style.css
@@ -150,10 +150,8 @@ a:visited {
 
 .article a {
     display: block;
-    background: #000;
-    color: #fff;
     padding: 10px;
-    text-decoration: none
+    text-decoration: none;
 }
 
 .contact-section {
