--- a/style.css
+++ b/style.css
@@ -72,41 +72,9 @@ a:visited {
     align-items: center
 }
 
-.welcome-section {
-    min-height: 600px;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.0) 40%, rgba(0, 0, 0, 0.65) 100%), url(img/flores.jpg) no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: relative
-}
-
 .logo {
-    position: absolute;
-    top: 60px;
-    left: 0;
-    right: 0;
-    margin: auto;
-    width: 140px
-}
-
-.shlogo {
-    fill: #f60;
-    opacity: .8
-}
-
-.welcome-section ul {
-    position: absolute;
-    bottom: 90px;
-    left: 0;
-    right: 0;
-    margin: auto;
-    text-align: center;
-    padding: 5px 0
-}
-
-.welcome-section ul li {
-    font-size: 1.5em;
-    color: #fff
+    margin-top: 4em;
+    width: 100%;
 }
 
 .about-section {
