--- a/style.css
+++ b/style.css
@@ -5,6 +5,14 @@
     font-weight: 400
 }
 
+@font-face {
+    font-family: 'Snowboarding';
+    src: url('fonts/Snowboarding.woff2') format('woff2'),
+         url('font/Snowboarding.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     background: #f5f5f5;
     font-size: 1em
@@ -45,6 +53,7 @@ a:visited {
 }
 
 .body,
+.logo-section,
 .welcome-section,
 .logo,
 .info,
@@ -53,7 +62,7 @@ a:visited {
 .contact-section,
 .copyright {
     display: flex;
-    flex-direction: column
+    flex-direction: column;
 }
 
 .made {
@@ -62,6 +71,7 @@ a:visited {
     justify-content: center
 }
 
+.logo-section,
 .welcome-section,
 .logo,
 .about-section,
@@ -72,9 +82,17 @@ a:visited {
     align-items: center
 }
 
+.logo-section {
+    margin-top: 3em;
+}
+
 .logo {
-    margin-top: 4em;
-    width: 100%;
+    font-family: 'Snowboarding';
+    font-size: 6em;
+    color: tomato;
+    text-align: center;
+    width: 200px;
+    line-height: .4;
 }
 
 .about-section {
