Testin LinkedIn button

--- a/style.css
+++ b/style.css
@@ -179,6 +179,9 @@ a:visited {
     .facebook:hover {
         background: #3b5998
     }
+    .linkedin:hover {
+        background: #0077b5
+    }
     .twitter:hover {
         background: #0084b4
     }
